Dash instead of underscore

--- a/.github/workflows/ci-krkrsdl2.yml
+++ b/.github/workflows/ci-krkrsdl2.yml
@@ -199,7 +199,7 @@
           "uses" : "nttld/setup-ndk@v1",
           "id" : "setup_ndk",
           "with" : {
-            "ndk_version" : "r21e"
+            "ndk-version" : "r21e"
           }
         },
         {
